--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,30 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Bank</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
 </head>
+
 <body>
+  <header class="p-2" style="background-color: rgb(66, 66, 76);height: 50px;color: azure;">
+    <h4 class="p-1 ms-3">SBI Net Banking Service</h4>
+  </header>
   <app-root></app-root>
+
+  <footer class="p-2 w-100 fixed-bottom" style="background-color: rgb(60, 60, 67);height: 50px;color: azure;">
+    <h6 class="p-1 ms-3">SBI Net Banking Service @2023</h6>
+  </footer>
+
+
 </body>
+
 </html>
